syntax = "proto3";

package pb;

import "entry.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message CreateEntryRequest {
  int32 user_id = 1;
  int32 item_id = 2;
  int32 quantity = 3;
  int32 total = 4;
}

message CreateEntryResponse {
  Entry entry = 1;
}