syntax = "proto3";

package pb;

import "entry.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message GetEntryRequest {
    int32 id = 1;
}

message GetEntryResponse {
    Entry entry = 1;
}

message ListEntriesRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListEntriesByUserRequest {
    int32 user_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message ListEntriesByItemRequest {
    int32 item_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message ListEntriesResponse {
    repeated Entry entries = 1;
}